@@ -7,7 +7,7 @@ EAPI="5"
 [[ "${PV}" = "9999" ]] && inherit subversion
 
 [[ "${PV}" = "9999" ]] && AUTOTOOLS_AUTORECONF="1"
-inherit base qt4-r2 autotools-utils
+inherit base fdo-mime qt4-r2 autotools-utils
 
 DESCRIPTION="An old-school all-digital 4-oscillator subtractive polyphonic synthesizer with stereo fx."
 HOMEPAGE="http://synthv1.sourceforge.net/"
@@ -23,11 +23,12 @@ else
 	KEYWORDS="~amd64 ~ppc ~x86"
 fi
 
-IUSE="alsa debug jack +jackmidi jacksession lv2"
-# Build fails with jack or jackmidi disabled (fixed upstream)
-REQUIRED_USE="jack jackmidi"
-#	jackmidi? ( jack )
-#	jacksession? ( jack )"
+IUSE="alsa debug jack jackmidi jacksession lv2 nsm osc"
+REQUIRED_USE="
+	|| ( jack lv2 )
+	jack? ( || ( alsa jackmidi ) )
+	jackmidi? ( jack )
+	jacksession? ( jack )"
 
 LICENSE="GPL-2"
 SLOT="0"
@@ -36,7 +37,8 @@ RDEPEND="dev-qt/qtcore
 	dev-qt/qtgui
 	alsa? ( media-libs/alsa-lib )
 	jack? ( media-sound/jack-audio-connection-kit )
-	lv2? ( media-libs/lv2 )"
+	lv2? ( media-libs/lv2 )
+	osc? ( media-libs/liblo )"
 DEPEND="${RDEPEND}"
 
 AUTOTOOLS_IN_SOURCE_BUILD="1"
@@ -57,10 +59,21 @@ src_configure() {
 		$(use_enable jackmidi jack-midi)
 		$(use_enable jacksession jack-session)
 		$(use_enable lv2)
+		$(use_enable osc liblo)
+		$(use_enable nsm)
 	)
+
 	autotools-utils_src_configure
 }
 
 src_install() {
 	autotools-utils_src_install INSTALL_ROOT="${D}"
+}
+
+pkg_postinst() {
+	fdo-mime_mime_database_update
+}
+
+pkg_postrm() {
+	fdo-mime_mime_database_update
 }
