@@ -2,6 +2,15 @@
 # Copyright 1999-2013 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*synthv1-0.3.4 (16 Jul 2013)
+
+  16 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
+  -synthv1-0.3.2.ebuild, -synthv1-0.3.2-r1.ebuild, +synthv1-0.3.4.ebuild,
+  synthv1-9999.ebuild:
+  Removed qt4 fix.
+  Version bump.
+  Removed old ebuilds.
+
   07 Jul 2013; Karl Linden (lilrc) <lilrc@users.sourceforge.net>
   synthv1-9999.ebuild:
   Make sure configure finds qt.
